kubernetes/jupyter/svc.yml
---
apiVersion: v1
kind: Service
metadata:
  name: jupyter
  labels:
    app: jupyter
spec:
  selector:
    app: jupyter
  ports:
  - name: http
    port: 8888
    protocol: TCP
